re-add Anthropic and MosaicML assistants (#110)
Co-authored-by: Pavithra Eswaramoorthy <pavithraes@outlook.com>

--- a/examples/python_api/python_api.ipynb
+++ b/examples/python_api/python_api.ipynb
@@ -19,16 +19,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "platform/c++/implementation/internal.cpp:205:reinit_singlethreaded(): Reinitialising as single-threaded.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'0.1.dev29+g03721c7.d20231009084220'"
+       "'0.1.dev57+g0e9c075.d20231025200357'"
       ]
      },
      "execution_count": 2,
@@ -44,17 +37,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "5a3759a6-ffb0-47f7-be40-cf9d62fc67da",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Config(local_cache_root=PosixPath('~/.cache/ragna'), rag=RagConfig(database_url='memory', queue_url='memory', document=<class 'ragna.core.LocalDocument'>, source_storages=[<class 'ragna.source_storages.RagnaDemoSourceStorage'>], assistants=[<class 'ragna.assistants.RagnaDemoAssistant'>]), api=ApiConfig(url=Url('http://127.0.0.1:31476/'), upload_token_secret=SecretStr('**********'), upload_token_ttl=300), ui=UiConfig(url=Url('http://127.0.0.1:31476/')))"
+       "Config(local_cache_root=PosixPath('/home/philip/.cache/ragna'), core=CoreConfig(queue_url='memory', document=<class 'ragna.core.LocalDocument'>, source_storages=[<class 'ragna.source_storages.RagnaDemoSourceStorage'>], assistants=[<class 'ragna.assistants.RagnaDemoAssistant'>]), api=ApiConfig(url='http://127.0.0.1:31476', database_url='memory', authentication=<class 'ragna.core.RagnaDemoAuthentication'>, upload_token_secret='thiZLJBgUNrJyJ150sfWrEFSkn8SR-jH', upload_token_ttl=300), ui=UiConfig(url='http://127.0.0.1:31477'))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "87613cac-44ba-4b85-ad3e-a1127dd65aa5",
    "metadata": {},
    "outputs": [],
@@ -81,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "818ff37c-d693-44b2-9d56-104eb2d86f59",
    "metadata": {},
    "outputs": [
@@ -100,9 +93,9 @@
     }
    ],
    "source": [
-    "from ragna.assistants import Gpt4, Gpt35Turbo16k, RagnaDemoAssistant\n",
+    "from ragna.assistants import RagnaDemoAssistant\n",
     "from ragna.core import Rag\n",
-    "from ragna.source_storages import Chroma, LanceDB, RagnaDemoSourceStorage\n",
+    "from ragna.source_storages import RagnaDemoSourceStorage\n",
     "\n",
     "rag = Rag(config)\n",
     "\n",
@@ -119,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "4c2f04c8-a0e1-47fc-a900-bc03b91088a2",
    "metadata": {},
    "outputs": [
@@ -127,10 +120,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{('Chroma', 'OpenAI/gpt-3.5-turbo-16k'): <coroutine object answer_prompt at 0x7f66e654ccc0>,\n",
-      " ('Chroma', 'OpenAI/gpt-4'): <coroutine object answer_prompt at 0x7f66e654c640>,\n",
-      " ('LanceDB', 'OpenAI/gpt-3.5-turbo-16k'): <coroutine object answer_prompt at 0x7f66e654c540>,\n",
-      " ('LanceDB', 'OpenAI/gpt-4'): <coroutine object answer_prompt at 0x7f66e65cd640>}\n"
+      "{('Chroma', 'Anthropic/claude-2'): <coroutine object answer_prompt at 0x7f850cb4b6c0>,\n",
+      " ('Chroma', 'Anthropic/claude-instant-1'): <coroutine object answer_prompt at 0x7f850cb4b640>,\n",
+      " ('Chroma', 'MosaicML/mpt-30b-instruct'): <coroutine object answer_prompt at 0x7f850cb4b7c0>,\n",
+      " ('Chroma', 'MosaicML/mpt-7b-instruct'): <coroutine object answer_prompt at 0x7f850cb4b740>,\n",
+      " ('Chroma', 'OpenAI/gpt-3.5-turbo-16k'): <coroutine object answer_prompt at 0x7f850cb4b0c0>,\n",
+      " ('Chroma', 'OpenAI/gpt-4'): <coroutine object answer_prompt at 0x7f850cb4b5c0>,\n",
+      " ('LanceDB', 'Anthropic/claude-2'): <coroutine object answer_prompt at 0x7f850cb4b9c0>,\n",
+      " ('LanceDB', 'Anthropic/claude-instant-1'): <coroutine object answer_prompt at 0x7f850cb4b940>,\n",
+      " ('LanceDB', 'MosaicML/mpt-30b-instruct'): <coroutine object answer_prompt at 0x7f850cb4bac0>,\n",
+      " ('LanceDB', 'MosaicML/mpt-7b-instruct'): <coroutine object answer_prompt at 0x7f850cb4ba40>,\n",
+      " ('LanceDB', 'OpenAI/gpt-3.5-turbo-16k'): <coroutine object answer_prompt at 0x7f850cb4b840>,\n",
+      " ('LanceDB', 'OpenAI/gpt-4'): <coroutine object answer_prompt at 0x7f850cb4b8c0>}\n"
      ]
     }
    ],
@@ -139,8 +140,25 @@
     "import itertools\n",
     "from pprint import pprint\n",
     "\n",
+    "from ragna.assistants import (\n",
+    "    Claude,\n",
+    "    ClaudeInstant,\n",
+    "    Gpt4,\n",
+    "    Gpt35Turbo16k,\n",
+    "    Mpt7bInstruct,\n",
+    "    Mpt30bInstruct,\n",
+    ")\n",
+    "from ragna.source_storages import Chroma, LanceDB\n",
+    "\n",
     "source_storages = [Chroma, LanceDB]\n",
-    "assistants = [Gpt35Turbo16k, Gpt4]\n",
+    "assistants = [\n",
+    "    Gpt35Turbo16k,\n",
+    "    Gpt4,\n",
+    "    ClaudeInstant,\n",
+    "    Claude,\n",
+    "    Mpt7bInstruct,\n",
+    "    Mpt30bInstruct,\n",
+    "]\n",
     "\n",
     "\n",
     "async def answer_prompt(source_storage, assistant):\n",
@@ -165,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "d125a99d-51c2-4008-b49b-0c648abdb9e0",
    "metadata": {},
    "outputs": [
@@ -173,34 +191,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "{('Chroma', 'OpenAI/gpt-3.5-turbo-16k'): 'Ragna is an open-source RAG '\n",
-      "                                         '(Retrieve, Analyze, Generate) '\n",
+      "{('Chroma', 'Anthropic/claude-2'): ' Based on the context provided, Ragna is '\n",
+      "                                   'an open-source RAG orchestration app.',\n",
+      " ('Chroma', 'Anthropic/claude-instant-1'): ' Based on the context provided, '\n",
+      "                                           'Ragna is an open-source RAG '\n",
+      "                                           'orchestration app.',\n",
+      " ('Chroma', 'MosaicML/mpt-30b-instruct'): 'Ragna is an open-source RAG '\n",
+      "                                          'orchestration app',\n",
+      " ('Chroma', 'MosaicML/mpt-7b-instruct'): 'Ragna is an open-source RAG '\n",
+      "                                         'orchestration app',\n",
+      " ('Chroma', 'OpenAI/gpt-3.5-turbo-16k'): 'Ragna is an open-source RAG '\n",
+      "                                         '(Retrieve, Ask, Generate) '\n",
       "                                         'orchestration app. It is designed to '\n",
-      "                                         'assist in the creation and '\n",
-      "                                         'management of conversational AI '\n",
-      "                                         'models. Ragna provides a '\n",
-      "                                         'user-friendly interface for '\n",
-      "                                         'developers to retrieve data, analyze '\n",
-      "                                         'it, and generate responses. It is '\n",
-      "                                         'built on top of the Rasa framework '\n",
-      "                                         'and can be used to train and deploy '\n",
-      "                                         'AI models for various applications '\n",
-      "                                         'such as chatbots and virtual '\n",
-      "                                         'assistants.',\n",
+      "                                         'facilitate the creation and '\n",
+      "                                         'deployment of conversational AI '\n",
+      "                                         'models. Ragna allows users to '\n",
+      "                                         'retrieve information from various '\n",
+      "                                         'sources, ask questions to clarify '\n",
+      "                                         'user queries, and generate responses '\n",
+      "                                         'based on the retrieved information. '\n",
+      "                                         'It is a powerful tool for building '\n",
+      "                                         'interactive and dynamic '\n",
+      "                                         'conversational agents.',\n",
       " ('Chroma', 'OpenAI/gpt-4'): 'Ragna is an open-source RAG orchestration app.',\n",
-      " ('LanceDB', 'OpenAI/gpt-3.5-turbo-16k'): 'Ragna is an open-source rag '\n",
-      "                                          'orchestration app. It is a software '\n",
-      "                                          'application that allows users to '\n",
-      "                                          'create and arrange musical '\n",
-      "                                          'compositions using ragtime music. '\n",
-      "                                          'It is designed to be accessible and '\n",
-      "                                          'customizable for musicians and '\n",
-      "                                          'composers.',\n",
-      " ('LanceDB', 'OpenAI/gpt-4'): 'Ragna is an open-source rag orchestration app.'}\n"
+      " ('LanceDB', 'Anthropic/claude-2'): ' Based on the context provided, Ragna is '\n",
+      "                                    'an open-source RAG orchestration app.',\n",
+      " ('LanceDB', 'Anthropic/claude-instant-1'): ' Based on the context provided, '\n",
+      "                                            'Ragna is an open-source RAG '\n",
+      "                                            'orchestration app.',\n",
+      " ('LanceDB', 'MosaicML/mpt-30b-instruct'): 'Ragna is an open-source RAG '\n",
+      "                                           'orchestration app',\n",
+      " ('LanceDB', 'MosaicML/mpt-7b-instruct'): 'Ragna is an open-source RAG '\n",
+      "                                          'orchestration app',\n",
+      " ('LanceDB', 'OpenAI/gpt-3.5-turbo-16k'): 'Ragna is an open-source RAG '\n",
+      "                                          '(Retrieve, Ask, Generate) '\n",
+      "                                          'orchestration app. It is designed '\n",
+      "                                          'to facilitate the creation and '\n",
+      "                                          'deployment of conversational AI '\n",
+      "                                          'models. Ragna allows users to '\n",
+      "                                          'retrieve information from various '\n",
+      "                                          'sources, ask questions to clarify '\n",
+      "                                          'user queries, and generate '\n",
+      "                                          'responses based on the retrieved '\n",
+      "                                          'information. It is a powerful tool '\n",
+      "                                          'for building interactive and '\n",
+      "                                          'dynamic conversational agents.',\n",
+      " ('LanceDB', 'OpenAI/gpt-4'): 'Ragna is an open-source RAG orchestration app.'}\n"
      ]
     }
    ],
