Tweak package discovery

--- a/entrypoints.ipynb
+++ b/entrypoints.ipynb
@@ -4,36 +4,62 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For this notebook setup is: python -m pip install plugins/vikings\n",
+    "#\n",
+    "# A more realistic workflow would be to create a PyPI package and then the user just needs\n",
+    "# to include it in the dependencies in the pyproject.toml file (for example)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'I am Ivar the Boneless!'"
+       "'I am Ivar the Boneless! '"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# ugly original version, just to show that it was automatically loaded into the config\n",
     "from ragna import Config\n",
     "\n",
-    "\n",
-    "class FakeConfig:\n",
-    "    pass\n",
-    "\n",
-    "\n",
     "config = Config()\n",
-    "config.core.assistants[1](FakeConfig()).answer(\"Who are you?\", [])"
+    "config.core.assistants[1](config).answer(\"Who are you?\", [])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'I am Ivar the Boneless! '"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# much nicer version for Python API\n",
+    "from vikings.assistants import Ivar\n",
+    "\n",
+    "from ragna import Config\n",
+    "\n",
+    "Ivar(Config()).answer(\"Who are you?\", [])"
+   ]
   }
  ],
  "metadata": {
