Add corpus name

--- a/test_metadata.ipynb
+++ b/test_metadata.ipynb
@@ -19,27 +19,9 @@
       "\n",
       "- document2.txt\n",
       "- document2.txt\n",
-      "- document2.txt\n",
-      "- document2.txt\n",
-      "- document2.txt\n",
-      "- document2.txt\n",
-      "- document2.txt\n",
-      "- document2.txt\n",
       "--------------------------------------------------------------------------------\n",
       "GE('idx', 3)\n",
       "\n",
-      "- document3.txt\n",
-      "- document4.txt\n",
-      "- document3.txt\n",
-      "- document4.txt\n",
-      "- document3.txt\n",
-      "- document4.txt\n",
-      "- document3.txt\n",
-      "- document4.txt\n",
-      "- document4.txt\n",
-      "- document4.txt\n",
-      "- document3.txt\n",
-      "- document3.txt\n",
       "- document4.txt\n",
       "- document3.txt\n",
       "- document4.txt\n",
@@ -48,60 +30,24 @@
       "EQ('department', 'legal')\n",
       "\n",
       "- document1.txt\n",
-      "- document0.txt\n",
       "- document1.txt\n",
       "- document0.txt\n",
-      "- document1.txt\n",
-      "- document0.txt\n",
-      "- document0.txt\n",
-      "- document1.txt\n",
-      "- document1.txt\n",
-      "- document0.txt\n",
-      "- document1.txt\n",
-      "- document0.txt\n",
-      "- document1.txt\n",
-      "- document0.txt\n",
-      "- document1.txt\n",
       "- document0.txt\n",
       "--------------------------------------------------------------------------------\n",
       "IN('priority', ['medium', 'high'])\n",
       "\n",
-      "- document3.txt\n",
       "- document1.txt\n",
       "- document4.txt\n",
       "- document3.txt\n",
       "- document1.txt\n",
       "- document4.txt\n",
       "- document3.txt\n",
-      "- document1.txt\n",
-      "- document4.txt\n",
-      "- document3.txt\n",
-      "- document4.txt\n",
-      "- document4.txt\n",
-      "- document1.txt\n",
-      "- document4.txt\n",
-      "- document3.txt\n",
-      "- document1.txt\n",
-      "- document3.txt\n",
-      "- document1.txt\n",
-      "- document4.txt\n",
-      "- document3.txt\n",
-      "- document1.txt\n",
-      "- document4.txt\n",
-      "- document3.txt\n",
-      "- document1.txt\n",
       "--------------------------------------------------------------------------------\n",
       "AND(\n",
       "  EQ('priority', 'low'),\n",
       "  EQ('department', 'legal'),\n",
       ")\n",
       "\n",
-      "- document0.txt\n",
-      "- document0.txt\n",
-      "- document0.txt\n",
-      "- document0.txt\n",
-      "- document0.txt\n",
-      "- document0.txt\n",
       "- document0.txt\n",
       "- document0.txt\n",
       "--------------------------------------------------------------------------------\n",
@@ -113,72 +59,24 @@
       "  LT('idx', 4),\n",
       ")\n",
       "\n",
-      "- document2.txt\n",
-      "- document2.txt\n",
-      "- document3.txt\n",
-      "- document1.txt\n",
-      "- document3.txt\n",
       "- document1.txt\n",
       "- document3.txt\n",
       "- document2.txt\n",
       "- document1.txt\n",
       "- document3.txt\n",
       "- document2.txt\n",
-      "- document2.txt\n",
-      "- document1.txt\n",
-      "- document3.txt\n",
-      "- document2.txt\n",
-      "- document1.txt\n",
-      "- document3.txt\n",
-      "- document2.txt\n",
-      "- document1.txt\n",
-      "- document3.txt\n",
-      "- document2.txt\n",
-      "- document1.txt\n",
-      "- document3.txt\n",
-      "- document1.txt\n",
       "--------------------------------------------------------------------------------\n",
       "None\n",
       "\n",
-      "- document2.txt\n",
-      "- document2.txt\n",
-      "- document3.txt\n",
-      "- document1.txt\n",
-      "- document0.txt\n",
-      "- document4.txt\n",
-      "- document3.txt\n",
-      "- document1.txt\n",
-      "- document0.txt\n",
-      "- document4.txt\n",
-      "- document3.txt\n",
-      "- document2.txt\n",
-      "- document1.txt\n",
-      "- document4.txt\n",
-      "- document3.txt\n",
-      "- document4.txt\n",
-      "- document2.txt\n",
-      "- document0.txt\n",
-      "- document0.txt\n",
-      "- document4.txt\n",
-      "- document2.txt\n",
       "- document1.txt\n",
       "- document4.txt\n",
       "- document3.txt\n",
       "- document2.txt\n",
       "- document1.txt\n",
       "- document0.txt\n",
-      "- document3.txt\n",
-      "- document2.txt\n",
-      "- document1.txt\n",
-      "- document0.txt\n",
       "- document4.txt\n",
       "- document3.txt\n",
       "- document2.txt\n",
-      "- document1.txt\n",
-      "- document0.txt\n",
-      "- document4.txt\n",
-      "- document3.txt\n",
-      "- document1.txt\n",
       "- document0.txt\n"
      ]
     }
@@ -229,7 +127,7 @@
     "        print(f\"- {document.name}: {document.metadata}\")\n",
     "\n",
     "    source_storage = source_storages.Chroma()\n",
-    "    source_storage.store(documents)\n",
+    "    source_storage.store(documents, corpus_name=\"dummy_corpus\")\n",
     "\n",
     "    for metadata_filter in metadata_filters:\n",
     "        print(\"-\" * 80)\n",
@@ -237,7 +135,7 @@
     "        print()\n",
     "\n",
     "        chat = Rag().chat(\n",
-    "            metadata_filter, source_storage=source_storage, assistant=DummyAssistant\n",
+    "            input=metadata_filter, source_storage=source_storage, assistant=DummyAssistant, corpus_name=\"dummy_corpus\"\n",
     "        )\n",
     "        answer = await chat.answer(\"?\")\n",
     "        print(answer)\n",
